<resources>
    <string name="app_name">project_donate_flood</string>
    <string name="donate_blood">Lifeline+</string>
    <string name="description_page1">Blood donation costs nothing,
        but it can mean the world to someone in need.</string>
    <string name="next">Next</string>
    <string name="description_page2">To the world, you may be one person, but to one person, you may be the world.</string>
    <string name="get_connect_community">Get Connect Community</string>
    <string name="description_page3">Join hands, save lives, and build a stronger community together.</string>
    <string name="get_started">Get Started</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_login_now">Already have an account? Login Now</string>
    <string name="don_t_have_an_account_yet_register_now">Don\'t have an account yet? Register Now</string>
    <string name="login_to_your_account">Login to your account</string>

    <!--   Select role page  -->
    <string name="title_select_role">What would you like to do?</string>
    <string name="logout">Log out</string>
    <string name="become_donor">Become a Donor</string>
    <string name="find_donor">Looking for a Donor</string>
    <string name="calmette_hospital_phnom_penh">Calmette Hospital Phnom Penh</string>
    <string name="stock_blood_group">Stock Blood Group</string>
    <string name="location_3_9km">Location (3.9Km)</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="_855_12_345_678">+855 12 345 678</string>
    <string name="get_help">Get Help</string>
    <string name="khmer_soviet_hospital_friendship">Khmer Soviet Hospital Friendship</string>
    <string name="stock_blood_group_1">Stock Blood Group</string>


</resources>