<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome_page1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/donate_blood"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="246dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/description_page1"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextSizeCheck" />

    <View
        android:id="@+id/page_indicator_2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/default_dot"
        android:foregroundGravity="center"
        app:layout_constraintStart_toEndOf="@+id/page_indicator_1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/page_indicator_3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/default_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/page_indicator_2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/page_indicator_1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selected_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/orange"
        android:text="@string/next"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_indicator_2" />
</androidx.constraintlayout.widget.ConstraintLayout>