<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_page">

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="382dp"
        android:layout_marginTop="252dp"
        android:background="@color/light_pink"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to_your_account"
                android:textColor="#333333"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="Email"
            android:textColor="#666666"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rounded_edittext"
            android:hint="Enter your email"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="5dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="Password"
            android:textColor="#666666"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rounded_edittext"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="5dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/Login_btn"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FF5722"
            android:minHeight="48dp"
            android:paddingStart="48dp"
            android:paddingTop="14dp"
            android:paddingEnd="48dp"
            android:paddingBottom="14dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="17dp"
            app:cornerRadius="24dp" />

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/don_t_have_an_account_yet_register_now"
            android:textAlignment="center"
            android:textColor="#007AFF"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />
        <ProgressBar
            android:id="@+id/pb_login_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_4" />

</androidx.constraintlayout.widget.ConstraintLayout>