<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".Select_role"
    android:padding="35dp">

    <!-- Title -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_select_role"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <!-- Become a Donor Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/becomeDonorCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageBecomeDonor"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginStart="30dp"
                android:src="@mipmap/become_donor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textBecomeDonor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/become_donor"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/arrowBecomeDonor"
                app:layout_constraintStart_toEndOf="@+id/imageBecomeDonor"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/arrowBecomeDonor"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textBecomeDonor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!-- Looking for a Donor Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/lookingDonorCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/becomeDonorCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageLookingDonor"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginStart="30dp"
                android:src="@mipmap/looking_for_donor_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textLookingDonor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/find_donor"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/arrowLookingDonor"
                app:layout_constraintStart_toEndOf="@+id/imageLookingDonor"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/arrowLookingDonor"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLookingDonor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!-- Logout Button -->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/white"
        android:text="Log out"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lookingDonorCard" />

</androidx.constraintlayout.widget.ConstraintLayout>
